[gd_scene load_steps=25 format=3 uid="uid://dlcy5lblrl3fb"]

[ext_resource type="Texture2D" uid="uid://cmv1orglsp5r3" path="res://AssetBundle/Sprites/Foxy.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://b6rs7qhyqgiet" path="res://scripts/player.gd" id="1_onrkg"]
[ext_resource type="PackedScene" uid="uid://5rxwnvgjejrc" path="res://Scenes/Bullet.tscn" id="2_6t5aa"]
[ext_resource type="AudioStream" uid="uid://dnpk03dklfy43" path="res://AssetBundle/Audio/Gun.mp3" id="4_vgqql"]
[ext_resource type="AudioStream" uid="uid://b6xb0bkvq3nin" path="res://AssetBundle/Audio/GameOver.mp3" id="5_fkybt"]
[ext_resource type="AudioStream" uid="uid://bx71rynoumdj5" path="res://AssetBundle/Audio/Running.mp3" id="6_x3wgy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_onrkg"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("1_4flbx")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("1_4flbx")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("1_4flbx")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("1_4flbx")
region = Rect2(33, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("1_4flbx")
region = Rect2(66, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("1_4flbx")
region = Rect2(99, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("1_4flbx")
region = Rect2(132, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("1_4flbx")
region = Rect2(165, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("1_4flbx")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("1_4flbx")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("1_4flbx")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("1_4flbx")
region = Rect2(132, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("1_4flbx")
region = Rect2(165, 32, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2hs0m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}],
"loop": true,
"name": &"lose",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_onrkg"]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("animator")]
script = ExtResource("1_onrkg")
animator = NodePath("AnimatedSprite2D")
bullet_scene = ExtResource("2_6t5aa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 0)
sprite_frames = SubResource("SpriteFrames_2hs0m")
animation = &"lose"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 4)
shape = SubResource("CircleShape2D_onrkg")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="FireSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vgqql")

[node name="GameOVerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_fkybt")
volume_db = 0.135

[node name="RunningSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_x3wgy")
volume_db = 0.135

[connection signal="timeout" from="Timer" to="." method="_on_fire"]
